study hard day-2

--- a/HTML/test2.html
+++ b/HTML/test2.html
@@ -12,8 +12,33 @@
 		<title>퇴근 후 공부는 어려워</title>
 </head>
 
-<body>
+<!-- <>
+	<h1>퇴근 후 공부는 너무 어려워</h1>
+	<h2>어려웡</h2>
+	<h6>스트레스;</h6>
 
+	<ol>
+		<li>아침 약먹기</li>
+		<li>점심은 약 안먹기</li>
+		<li>저녁 약먹기</li>
+	</ol>
+	<ul>
+		<li>실비보험 청구받기</li>
+		<li>머리 예약하기(다음주)</li>
+		<li>차량 실내 까지 청소받기</li>
+	</ul>
+	<p>어려워어여루어 가볍게 정리 츄</p>
+	<a href="https://www.google.com">Google</a>
+	<a href="https://www.google.com" target="_self">뒤로가기 눌러줘;</a> <br>
+	<a href="https://www.google.com" target="_blank">Google 새탭에 생김ㅋ</a> -->
+	<header>
+		<nav></nav>
+		<section></section>
+		<article></article>
+		<section>
+			<article></article>
+		</section>
+	</header>
 </body>
 
 </html>
